# mood-tracker

./: .gitignore  README.md  docker-compose.yml  eslint.config.mjs  fix-database.md  mood-tracker.db  package-lock.json  package.json  vitest.config.mts  vitest.setup.ts
.gemini/: GEMINI.md
__tests__/: ThemeProvider.test.tsx  accessControl.test.ts  useTrackerData.test.tsx
ai/: main.py  requirements.txt
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py  middleware.py
backend/app/api/v1/routes/: auth.py  cbt_logs.py  data.py  moods.py  users.py
backend/app/core/: ai_config.py  constants.py  logging.py  security.py
backend/app/db/: session.py
backend/app/models/: prompt_version.py
backend/app/repositories/: audit.py  cbt.py  mood.py  user.py
backend/app/schemas/: audit.py  base.py  cbt.py  mood.py  user.py
backend/app/services/: ai_client.py  audit.py  gemini_client.py  privacy.py  prompt_manager.py  safety_handler.py
backend/scripts/: backfill_analysis.py
backend/tests/: test_main.py
backend/tests/integration/: __init__.py  test_cbt_analyze_endpoint.py
backend/tests/services/: __init__.py  test_ai_client_factory.py  test_gemini_client.py  test_prompt_manager.py  test_safety_handler.py
db/: sqitch.conf  sqitch.plan
docs/: PHASE_2_CHANGELOG.md  ai_implementation_spec.md  api_spec_cbt_v1.md  api_spec_cbt_v2.md  architecture.md  auth_implementation_plan.md  auth_implementation_plan_assessment.md  backend_architecture_findings.md  diagram_and_architecture_update_checklist.md  phase_1_plan.md  (+8 more)
(+135 files in other folders)
