[project]
name = "mood-tracker-backend"
version = "0.2.0"
description = "Backend interface for cognitive behavioural therapy (CBT)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite==0.21.0",
    "fastapi==0.115.8",
    "google-generativeai==0.8.3",
    "httpx==0.28.1",
    "nltk==3.9.1",
    "pydantic==2.10.6",
    "pydantic-settings==2.6.1",
    "python-dotenv==1.0.1",
    "python-json-logger==3.3.0",
    "sqlmodel==0.0.22",
    "textblob==0.18.0.post0",
    "uvicorn==0.34.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt<4.0.0",
    "python-jose[cryptography]==3.3.0",
    "email-validator",
]
